remove unnecessary file

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Forward Monitoring Service">
+    <meta name="description" content="Template">
     <link rel="icon" type="image/svg+xml" href="/forw-fav.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Forward Monitoring Service</title>
+    <title>Template</title>
   </head>
   <body class="bg-light-base-bg h-screen" data-theme="light">
     <div id="root"></div>
